force-app/main/default/objects/DBM_Report_Grouping_Entry__c/fields/Display_as_Link__c.field-meta.xml
<CustomField>
    <fullName>Display_as_Link__c</fullName>
    <formula>Grouping__r.Display_as_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display as Link</label>
    <type>Checkbox</type>
</CustomField>