force-app/main/default/objects/DBM_Report_Grouping_Entry__c/fields/Grouping__c.field-meta.xml
<CustomField>
    <fullName>Grouping__c</fullName>
    <label>Grouping</label>
    <referenceTo>DBM_Report_Grouping__c</referenceTo>
    <relationshipLabel>DBM Report Grouping Entries</relationshipLabel>
    <relationshipName>DBM_Report_Grouping_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>