force-app/main/default/objects/DBM_Report_Grouping_Entry__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <label>Report</label>
    <referenceTo>DBM_Report__c</referenceTo>
    <relationshipLabel>DBM Report Grouping Entries</relationshipLabel>
    <relationshipName>DBM_Report_Grouping_Entries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>