force-app/main/default/objects/DBM_Report_Grouping_Entry__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DBM_Report_Grouping_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>